:rocket: [Java] New Problem's Solutions (40 medium)